--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body style="background-color: black">
     <h1 style="color: red">Zagar gay</h1>
-    <p>Hello world!</p>
+    <p>Hello world! My first site</p>
     <!-- <script>
       alert("Salut oleg");
     </script> -->
