--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Andrii gay</title>
   </head>
   <body style="background-color: black">
-    <h1 style="color: red">Zagar gay</h1>
+    <h1 style="color: red">I'm trying!</h1>
     <p>Hello world! My first site</p>
     <!-- <script>
       alert("Salut oleg");
