my first experience

--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta namhe="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Andrii gay</title>
+    <title>My first page</title>
   </head>
-  <body style="background-color: black">
-    <h1 style="color: red">I'm trying!</h1>
+  <body>
+    <h1>I'm trying!</h1>
     <p>Hello world! My first site</p>
     <!-- <script>
       alert("Salut oleg");
     </script> -->
 
-    <script src="js/script.js"></script>
+    <script src="firstEx.js"></script>
   </body>
 </html>
