--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       alert("Salut oleg");
     </script> -->
 
-    <script src="firstEx.js"></script>
+    <script src="exercises.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
