--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
 
     <script src="exercises.js"></script>
     <script src="js/script.js"></script>
+    <script src="exFromSite.js"></script>
   </body>
 </html>
